@@ -1,7 +1,5 @@
 package com.devonfw.tools.ide.tool.docker;
 
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -10,8 +8,6 @@ import java.util.Set;
 import com.devonfw.tools.ide.common.Tag;
 import com.devonfw.tools.ide.context.IdeContext;
 import com.devonfw.tools.ide.os.SystemArchitecture;
-import com.devonfw.tools.ide.process.ProcessContext;
-import com.devonfw.tools.ide.step.Step;
 import com.devonfw.tools.ide.tool.GlobalToolCommandlet;
 import com.devonfw.tools.ide.tool.PackageManager;
 import com.devonfw.tools.ide.tool.PackageManagerCommand;
@@ -67,35 +63,23 @@ public class Docker extends GlobalToolCommandlet {
   }
 
   @Override
-  public boolean install(boolean silent, ProcessContext processContext, Step step) {
-
-    if (this.context.getSystemInfo().isLinux()) {
-      return runWithPackageManager(silent, getPackageManagerCommandsInstall());
-    } else {
-      return super.install(silent, processContext, step);
-    }
-  }
-
-  private List<PackageManagerCommand> getPackageManagerCommandsInstall() {
+  protected List<PackageManagerCommand> getInstallPackageManagerCommands() {
 
     String edition = getConfiguredEdition();
     ToolRepository toolRepository = getToolRepository();
     VersionIdentifier configuredVersion = getConfiguredVersion();
     String resolvedVersion = toolRepository.resolveVersion(this.tool, edition, configuredVersion, this).toString();
 
-    List<PackageManagerCommand> pmCommands = new ArrayList<>();
-    pmCommands.add(new PackageManagerCommand(PackageManager.ZYPPER, Arrays.asList(
-        "sudo zypper addrepo https://download.opensuse.org/repositories/isv:/Rancher:/stable/rpm/isv:Rancher:stable.repo",
-        String.format("sudo zypper --no-gpg-checks install rancher-desktop=%s*", resolvedVersion))));
-    pmCommands.add(new PackageManagerCommand(PackageManager.APT, Arrays.asList(
-        "curl -s https://download.opensuse.org/repositories/isv:/Rancher:/stable/deb/Release.key | gpg --dearmor |"
-            + " sudo dd status=none of=/usr/share/keyrings/isv-rancher-stable-archive-keyring.gpg",
-        "echo 'deb [signed-by=/usr/share/keyrings/isv-rancher-stable-archive-keyring.gpg]"
-            + " https://download.opensuse.org/repositories/isv:/Rancher:/stable/deb/ ./' |"
-            + " sudo dd status=none of=/etc/apt/sources.list.d/isv-rancher-stable.list", "sudo apt update",
-        String.format("sudo apt install -y --allow-downgrades rancher-desktop=%s*", resolvedVersion))));
-
-    return pmCommands;
+    return List.of(new PackageManagerCommand(PackageManager.ZYPPER, List.of(
+            "sudo zypper addrepo https://download.opensuse.org/repositories/isv:/Rancher:/stable/rpm/isv:Rancher:stable.repo",
+            String.format("sudo zypper --no-gpg-checks install rancher-desktop=%s*", resolvedVersion))),
+        new PackageManagerCommand(PackageManager.APT, List.of(
+            "curl -s https://download.opensuse.org/repositories/isv:/Rancher:/stable/deb/Release.key | gpg --dearmor |"
+                + " sudo dd status=none of=/usr/share/keyrings/isv-rancher-stable-archive-keyring.gpg",
+            "echo 'deb [signed-by=/usr/share/keyrings/isv-rancher-stable-archive-keyring.gpg]"
+                + " https://download.opensuse.org/repositories/isv:/Rancher:/stable/deb/ ./' |"
+                + " sudo dd status=none of=/etc/apt/sources.list.d/isv-rancher-stable.list", "sudo apt update",
+            String.format("sudo apt install -y --allow-downgrades rancher-desktop=%s*", resolvedVersion))));
   }
 
   @Override
